# code_rust

./: Cargo.toml  README.md
src/: f1.txt  ftrait.rs  ge.rs  hashmap.rs  main.rs  taint3.rs  tra.rs  trait4.rs
